README an similar update

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,7 @@
+the MikeSuru extension is made by:
+
+ -- Michele
+
 The FreeDesktop Suru icon set is designed & developed by:
 
  -- Sam Hewitt <sam@snwh.org>
